# src/api/Routes/AuthRoutes.js
@@ -5,6 +5,7 @@ const SignupRequest = require("../Requests/SignupRequest");
 const loginRequest = require("../Requests/LoginRequest");
 const Auth = require("../Middlewares/Auth");
 const SendPasswordResetLinkRequest = require("../Requests/SendPasswordResetLinkRequest");
+const PasswordResetRequest = require("../Requests/PasswordResetRequest");
 // const upload = require("../Services/multer");
 
 const userRouter = Router();
@@ -21,6 +22,11 @@ userRouter.post(
   "/password-reset-link",
   SendPasswordResetLinkRequest,
   AuthController.sendPasswordResetToken
+);
+userRouter.post(
+  "/password-reset",
+  PasswordResetRequest,
+  AuthController.resetPassword
 );
 userRouter.get("/user", Auth, (req, res) => {
   res.send(req.user);
